[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Projectile.gd" type="Script" id=1]
[ext_resource path="res://assets/Arrow.png" type="Texture" id=2]

[sub_resource type="SphereShape" id=1]
radius = 0.137754

[node name="Projectile" type="Area"]
monitorable = false
script = ExtResource( 1 )

[node name="SpriteVertical" type="Sprite3D" parent="."]
transform = Transform( -0.707107, -0.707107, -4.37114e-08, -3.09086e-08, -3.09086e-08, 1, -0.707107, 0.707107, 1.91069e-15, 0, 0, 0 )
transparent = false
alpha_cut = 1
texture = ExtResource( 2 )

[node name="SpriteHorizontal" type="Sprite3D" parent="."]
transform = Transform( -3.09086e-08, 3.09086e-08, 1, 0.707107, 0.707107, 0, -0.707107, 0.707107, -4.37114e-08, 0, 0, 0 )
transparent = false
alpha_cut = 1
texture = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.191937 )
shape = SubResource( 1 )

[node name="DestroyTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Projectile_body_entered"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_DestroyTimer_timeout"]
